// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button renders an Button 1`] = `
<div>
  <button
    class="css-1xsp84t"
    font-family="default"
    font-size="small,medium"
  >
    Click me!
  </button>
</div>
`;

exports[`components/Button renders an Button with variant prop 1`] = `
<div>
  <button
    class="css-hf0duu"
    font-family="default"
    font-size="small,medium"
  >
    Click me!
  </button>
</div>
`;
